--- a/PetFactoryBD/app/build.gradle
+++ b/PetFactoryBD/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     namespace 'com.example.petfactorybd'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.example.petfactorybd"
@@ -30,6 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures{
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -44,7 +47,10 @@ dependencies {
     androidTestImplementation libs.androidx.espresso.core
 
     def nav_version = "2.7.2" // Check for the latest version
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.8.4"
+    implementation "androidx.navigation:navigation-ui-ktx:2.8.4"
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7" // Adjust version as needed
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.8.7" // For LiveData if you plan to use it
 
 }
