--- a/PetFactoryBD/app/build.gradle
+++ b/PetFactoryBD/app/build.gradle
@@ -67,5 +67,8 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.6.1'
     implementation "androidx.room:room-ktx:2.5.1" // Replace with the latest version
 
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    kapt 'com.github.bumptech.glide:compiler:4.15.1'
+
 
 }
